codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_blocked_failed_feedback_history_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
  PreToolUse hook (blocked)
  feedback: run tests before touching the fixture

  PostToolUse hook (failed)
  error: hook exited with code 7
