codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_live_running_then_quiet_completed_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{running_snapshot}\\n\\n{completed_lingering_snapshot}\\n\\n{completed_snapshot}\")"
---
running
live hooks:
  Running PostToolUse hook…
history:
<empty>

completed lingering
live hooks:
  Running PostToolUse hook…
history:
<empty>

completed after linger
live hooks:
<empty>
history:
<empty>
